# xmpmeta

./: AUTHORS  BUILD  CMakeLists.txt  CONTRIBUTING  LICENSE  METADATA  OWNERS  README.google  README.md  p4_depot_paths  xmpmeta.blueprint
cmake/: AppendTargetProperty.cmake  FindGlog.cmake  FindLibxml.cmake  ReadXdmlibVersionFromSource.cmake  ReadXmpmetaVersionFromSource.cmake  UpdateCacheVariable.cmake  XdmlibConfig.cmake.in  XdmlibConfigVersion.cmake.in  XmpmetaConfig.cmake.in  XmpmetaConfigVersion.cmake.in  uninstall.cmake.in
google3/base/: integral_types.h
google3/gflags/: gflags.h
google3/glog/: logging.h
google3/gmock/: gmock.h  mock-log.h
google3/gtest/: gtest.h
includes/: BUILD
includes/xdmlib/: audio.h  camera.h  camera_pose.h  cameras.h  device.h  device_pose.h  equirect_model.h  image.h  point_cloud.h  profile.h  profiles.h  version.h
includes/xmpmeta/: gaudio.h  gimage.h  gpano.h  md5.h  pano_meta_data.h  photo_sphere_writer.h  version.h  vr_photo_writer.h  xmp_const.h  xmp_data.h  xmp_parser.h  xmp_writer.h  xmpmeta.h
internal/xdmlib/: BUILD  CMakeLists.txt  LICENSE  METADATA  README.google  audio.cc  audio_test.cc  camera.cc  camera_pose.cc  camera_pose_test.cc  camera_test.cc  cameras.cc  cameras_test.cc  device.cc  device_pose.cc  device_pose_test.cc  device_test.cc  dimension.h  element.h  equirect_model.cc  equirect_model_test.cc  image.cc  image_test.cc  point.h  point_cloud.cc  point_cloud_test.cc  profile.cc  profile_test.cc  profiles.cc  profiles_test.cc  xdm.gyp
internal/xmpmeta/: BUILD  CMakeLists.txt  base64.cc  base64.h  base64_test.cc  file.cc  file.h  gaudio.cc  gaudio_test.cc  gimage.cc  gimage_test.cc  gpano.cc  gpano_test.cc  jpeg_io.cc  jpeg_io.h  jpeg_io_test.cc  md5.cc  md5_test.cc  test_util.cc  test_util.h  test_xmp_creator.cc  test_xmp_creator.h  vr_photo_writer.cc  vr_photo_writer_test.cc  xmp_const.cc  xmp_data.cc  xmp_parser.cc  xmp_parser_cli.cc  xmp_parser_test.cc  xmp_writer.cc  xmp_writer_cli.cc  xmp_writer_test.cc  xmpmeta.gyp
internal/xmpmeta/xml/: BUILD  const.cc  const.h  deserializer.h  deserializer_impl.cc  deserializer_impl.h  deserializer_impl_test.cc  search.cc  search.h  search_test.cc  serializer.h  serializer_impl.cc  serializer_impl.h  serializer_impl_test.cc  utils.cc  utils.h  utils_test.cc  xml.gyp
testdata/: vr_photo_no_audio_ext_section_data.txt  vr_photo_no_audio_std_section_data.txt  vr_photo_with_audio_ext_section_data.txt  vr_photo_with_audio_std_section_data.txt
testdata/xdm/: device_testdata.txt  equirect_model_testdata.txt
